--- a/snowplow.json
+++ b/snowplow.json
@@ -1,22 +1,19 @@
 {
+  "12345": {
     "id": "12345",
-    "type": "event"‚
-    "name": “click“,
-    "12345"; {
-        primary: true,
-        "image":
-            {
-                "url": "images/0001.jpg",
-                "width": 200,
-                "height": 200,
-            },
-        "thumbnail":
-            {
-                "url": "images/thumbnails/0001.jpg",
-                "width": 32,
-                "height": 32
-            },
-        "root": 'acme.com'
-        }
+    "type": "event",
+    "name": "click",
+    "primary": true,
+    "image": {
+      "url": "images/0001.jpg",
+      "width": 200,
+      "height": 200,
+      "thumbnail": {
+        "url": "images/thumbnails/0001.jpg",
+        "width": 32,
+        "height": 32
+      },
+      "root": "acme.com"
     }
+  }
 }
